# extrem

./: .gitignore  FileToUpload.py  README.md  config_ext_drive.py  env.yml  external_drive_paths.json  fix-ftr-install.sh  pyproject.toml  requirements.txt  save_to_google_drive.py  update-saves.ps1  update-saves.sh
utils/: config_ext_drive.py  ensure_slashes.py  external_drive_paths.json
