[tool.poetry]
name = "extrem"
package-mode = false
version = "0.1.0"
description = "Saves given file to both an external drive and Google Drive."
authors = ["Martin Reid <lmreid1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faster-than-requests = "21.03.03"
choosenim-install = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
