[tool.poetry]
name = "extrem"
package-mode = false
version = "0.1.0"
description = "Saves given file to both an external drive and Google Drive."
authors = ["Martin Reid <lmreid1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth-oauthlib = "1.2.1"
google = "3.0.0"
requests = "2.32.3"
pycurl = "7.45.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
